force-app/main/default/objects/Sondertilgung__c/Sondertilgung__c.object-meta.xml
<CustomObject>
    <label>Sondertilgung</label>
    <nameField>
        <label>Sondertilgung Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sondertilgungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>