force-app/main/default/objects/Sondertilgung__c/fields/Betrag__c.field-meta.xml
<CustomField>
    <fullName>Betrag__c</fullName>
    <label>Betrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>