force-app/main/default/objects/Sondertilgung__c/fields/Finanzierungsbaustein__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsbaustein__c</fullName>
    <label>Finanzierungsbaustein</label>
    <referenceTo>Finanzierungsbaustein__c</referenceTo>
    <relationshipLabel>Sondertilgungen</relationshipLabel>
    <relationshipName>Sondertilgungen</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>