force-app/main/default/objects/Sondertilgung__c/fields/JahrDerAuszahlung__c.field-meta.xml
<CustomField>
    <fullName>JahrDerAuszahlung__c</fullName>
    <label>Jahr der Auszahlung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>