force-app/main/default/objects/Sondertilgung__c/fields/JahrDerAuszahlungText__c.field-meta.xml
<CustomField>
    <fullName>JahrDerAuszahlungText__c</fullName>
    <label>Jahr der Auszahlung</label>
    <length>10</length>
    <type>Text</type>
</CustomField>