force-app/main/default/objects/Sondertilgung__c/fields/Prozent__c.field-meta.xml
<CustomField>
    <fullName>Prozent__c</fullName>
    <label>Prozent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>