force-app/main/default/objects/Sondertilgung__c/validationRules/JahrDerAuszahlungOnlyNumbers.validationRule-meta.xml
<ValidationRule>
    <fullName>JahrDerAuszahlungOnlyNumbers</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(JahrDerAuszahlungText__c,&quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>JahrDerAuszahlung__c</errorDisplayField>
    <errorMessage>Das Jahr der Auszahlung darf keine Buchstaben enthalten.</errorMessage>
</ValidationRule>